[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/DialogPanel.gd" type="Script" id=1]
[ext_resource path="res://res/font.tres" type="DynamicFont" id=2]

[node name="DialogPanel" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.574588 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -235.0

[node name="CharaName" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 18.0
margin_right = 254.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "GUARD"
uppercase = true

[node name="CharaMessage" type="Label" parent="Panel"]
margin_left = 19.0
margin_top = 63.0
margin_right = 1027.0
margin_bottom = 217.0
custom_fonts/font = ExtResource( 2 )
text = "Stop right there criminal scum !
You'll pay for what you did !"
autowrap = true

[node name="CharaPortrait" type="TextureRect" parent="Panel"]
margin_left = 1071.0
margin_top = 29.0
margin_right = 1232.0
margin_bottom = 207.0
stretch_mode = 6
